--- a/src/app/profile/about/about.component.html
+++ b/src/app/profile/about/about.component.html
@@ -1,5 +1,5 @@
-<div class="card" id="about">
-    <div class="card-body">
+<div class="cardmain" id="about">
+    <div class="c-body">
       <h5 class="card-title">About</h5>
       <p class="card-text">I am a software engineer </p>
       <a href="#" class="card-link">Card link</a>
