--- a/src/app/profile/blogs/blogs.component.html
+++ b/src/app/profile/blogs/blogs.component.html
@@ -1,8 +1,8 @@
-<div class="card" id="blogs">
-    <div class="card-body">
-      <h5 class="card-title">BLOG</h5>
+<div class="cardmain" id="blogs">
+    <div class="c-body">
+      <h5 class="card-title">BLOGS</h5>
       <p class="card-text">I am a software engineer </p>
       <!-- <a href="#" class="card-link">Card link</a>
       <a href="#" class="card-link">Another link</a> -->
     </div>
-  </div>
+  </div>  
