--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -1,8 +1,73 @@
-<div class="card" id="projects">
-    <div class="card-body">
-      <h5 class="card-title">PROJECTS</h5>
-      <p class="card-text">I am a software engineer </p>
-      <!-- <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a> -->
+<div class="cardmain" id="projects">
+    <div class="c-body">
+      <h1 [ngStyle]="{'text-align': 'center', 'padding-top': '70px'}">Projects</h1>
+
+      <div class="card-container">
+
+     <!-- cards -->
+     <div class="col-md-4">
+      <div class="inner-card">
+        <div class="card-item">
+          <img class ="card-image-top" src="../../../assets/images/wellbee.png" id="">
+            <div class="card-body">
+              <h3 class="project-title">WellBee  <i class="fab fa-github"></i>  <i class="fas fa-globe"></i></h3>
+              <h3 class='card-text'>
+                 <img src='../../../assets/images/icons/ruby.png' id="smallIcons"/>
+                     
+                 <img src='../../../assets/images/icons/rails.png' id="smallIcons"/>
+                     
+                 <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
+              </h3>
+            </div>
+          </div>
+        </div>
+     </div>
+     
+     <div class="col-md-4">
+      <div class="inner-card">
+        <div class="card-item">
+          <img class ="card-image-top" src="../../../assets/images/horrormovies.png" id="">
+            <div class="card-body">
+              <h3 class="project-title">HorrorMovies  <i class="fab fa-github"></i>  <i class="fas fa-globe"></i></h3>
+              <h3 class='card-text'>
+                <img src='../../../assets/images/icons/Javascript.png' id="smallIcons"/>
+                      
+                <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
+                      
+                <img src='../../../assets/images/icons/ruby.png' id="smallIcons"/>
+                      
+                <img src='../../../assets/images/icons/rails.png' id="smallIcons"/>
+              </h3>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="inner-card">
+        <div class="card-item">
+          <img class ="card-image-top" src="../../../assets/images/skibud.png" id="">
+            <div class="card-body">
+              <h3 class="project-title">SkiBud  <i class="fab fa-github"></i>  <i class="fas fa-globe"></i></h3>
+              <h3 class='card-text'>
+                <img src='../../../assets/images/icons/React.png' id="smallIcons"/>
+                      
+                <img src='../../../assets/images/icons/Redux.png' id="smallIcons"/>
+                      
+                <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
+                      
+                <img src='../../../assets/images/icons/Nodejs.png' id="smallIcons"/>
+                      
+                <img src='../../../assets/images/icons/Express.png' id="smallIcons"/>
+              </h3>
+            </div>
+        </div>
+      </div>
+    </div>
+    </div>
     </div>
   </div>
+
+  <!-- https://floating-ocean-14783.herokuapp.com/users -->
+  <!-- https://master.d33t5402rji87e.amplifyapp.com/ -->
+  <!-- https://master.d33bvqmj8s7z7b.amplifyapp.com/# -->
