--- a/src/app/profile/skills/skills.component.html
+++ b/src/app/profile/skills/skills.component.html
@@ -1,8 +1,12 @@
-<div class="card" id="skills">
-    <div class="card-body">
+<div class="cardmain" id="skills">
+    <div class="c-body">
+
+
       <h5 class="card-title">SKILLS</h5>
       <p class="card-text">I am a software engineer </p>
       <!-- <a href="#" class="card-link">Card link</a>
       <a href="#" class="card-link">Another link</a> -->
+
+
     </div>
   </div>
