--- a/src/app/profile/about/about.component.html
+++ b/src/app/profile/about/about.component.html
@@ -1,16 +1,25 @@
-<div class="cardmain" id="about">
-    <div class="c-body">
-      <h5 class="card-title">About</h5>
-      <p class="card-text">I am a software engineer </p>
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+  <div class="c-body" id="about">
+    <div class="blog">
+      <h1>About</h1>
     </div>
-  </div>
 
-<!-- 
-<div class='aboutcontainer' id="about">
-    <div class="about">
-        About
-    </div>
-</div> -->
+        <div class="card-container">
+
+            <div class="row">
+
+                  <!-- cards -->
+                    <div class="about-card">
+                      <div class="about-item">
+                        I am passionate about software engineering and finding creative 
+                        solutions to solve complex problems. 
+                        After several years as a clinical researcher and a medical interpreter, 
+                        I have found myself drawn to the world of programming, its fast pace and unlimited learning opportunities. 
+                        Trained in JavaScript, React, Ruby, Rails, Node, and AWS.  
+                        </div>
+                      </div>
+        
+                      
+                </div>
+        </div>
+  </div>
 
