--- a/src/app/profile/blogs/blogs.component.html
+++ b/src/app/profile/blogs/blogs.component.html
@@ -1,8 +1,277 @@
-<div class="cardmain" id="blogs">
-    <div class="c-body">
-      <h5 class="card-title">BLOGS</h5>
-      <p class="card-text">I am a software engineer </p>
-      <!-- <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a> -->
+  <div class="c-body" id="blogs">
+    <div class="blog">
+      <h1>Blogs</h1>
     </div>
-  </div>  
+    <!-- <h1 >Blogs</h1> -->
+
+    <!-- <div class="card-container"> -->
+
+      <div class="blog-row">
+
+        
+        <!-- <div class="testest" [ngStyle]="{'display': 'contents'}"> -->
+
+   <!-- cards -->
+   <!-- <div class="col-md-4">
+      <div class="blog-card-item">
+        <img class ="blog-card-image-top" src="../../../assets/images/blogs/cli.jpg" id="">
+          <div class="blog-card-body">
+            <div class="blog-title">
+              <p [ngStyle]="{'margin': '0'}">My First CLI Project</p>
+              
+                <small class="blog-date">Jun 25, 2019</small>
+              
+
+            </div>
+            
+          </div>
+        </div>
+   </div> -->
+ 
+   <!-- <div class="col-md-4">
+      <div class="blog-card-item">
+        <img class ="blog-card-image-top" src="../../../assets/images/blogs/rails.jpg" id="">
+          <div class="blog-card-body">
+            <div class="blog-title">
+              <p [ngStyle]="{'margin': '0'}">Building an App Using Ruby on Rails</p>
+              
+                <small class="blog-date">July 17, 2019</small>
+              
+
+            </div>
+            <div class="content__d"><a href="#">Read</a></div>
+          </div>
+        </div>
+   </div>
+
+   <div class="col-md-4">
+      <div class="blog-card-item">
+        <img class ="blog-card-image-top" src="../../../assets/images/blogs/oop.png" id="">
+          <div class="blog-card-body">
+            <div class="blog-title">
+              <p [ngStyle]="{'margin': '0'}">JS: Four Principles of Object-Oriented Programming</p>
+              
+                <small class="blog-date">Dec 8, 2019</small>
+              
+
+            </div>
+            
+          </div>
+        </div>
+   </div>
+
+   <div class="col-md-4">
+      <div class="blog-card-item">
+        <img class ="blog-card-image-top" src="../../../assets/images/blogs/FP.png" id="">
+          <div class="blog-card-body">
+            <div class="blog-title">
+              <p [ngStyle]="{'margin': '0'}">Intro into Functional Programming</p>
+              
+                <small class="blog-date">Dec 15, 2019</small>
+              
+
+            </div>
+            
+          </div>
+        </div>
+   </div>
+
+   <div class="col-md-4">
+      <div class="blog-card-item">
+        <img class ="blog-card-image-top" src="../../../assets/images/blogs/redux.png" id="">
+          <div class="blog-card-body">
+            <div class="blog-title">
+              <p [ngStyle]="{'margin': '0'}">Understanding Redux</p>
+              
+                <small class="blog-date">Dec 22, 2019</small>
+              
+
+            </div>
+            
+          </div>
+        </div>
+   </div>
+
+   <div class="col-md-4">
+      <div class="blog-card-item">
+        <img class ="blog-card-image-top" src="../../../assets/images/blogs/JWT.jpg" id="">
+          <div class="blog-card-body">
+            <div class="blog-title">
+              <p [ngStyle]="{'margin': '0'}">Setting up JWT Auth with Node.js and Express</p>
+              
+                <small class="blog-date">Dec 29, 2019</small>
+              
+
+            </div>
+            
+          </div>
+        </div>
+   </div>
+
+   <div class="col-md-4">
+      <div class="blog-card-item">
+        <img class ="blog-card-image-top" src="../../../assets/images/blogs/hooks.jpg" id="">
+          <div class="blog-card-body">
+            <div class="blog-title">
+              <p [ngStyle]="{'margin': '0'}">React Hooks useState() and useEffect()</p>
+              
+                <small class="blog-date">Jan 4, 2020</small>
+              
+
+            </div>
+            
+          </div>
+        </div>
+   </div> -->
+
+   <!-- <article class="blog-card blog">
+      <div class="blog__info-hover">
+        <p>Go to the article </p>
+      </div> 
+      <div class="card__img" ></div>
+          <a href="#" class="card_link">
+              <div class="card__img--hover"></div>
+            </a>
+      <div class="card__info">
+          <span class="card__category"> Ruby</span><br>
+          <small class="blog-date">June 25, 2019</small>
+          <h4 class="card__title">My First CLI Project</h4>
+      </div>
+  </article>   -->
+
+  <article class="blog-card blog--1">
+    <div class="blog__info-hover">
+        <!-- <i class="fas fa-globe" [ngStyle]="{'zoom':'1.2'}"></i> -->
+        <p>Go to the article</p>
+    </div> 
+    <div class="card__img" ></div>
+        <a href="https://medium.com/@khmel87/my-first-cli-project-f5ee583a15bf" class="card_link">
+            <div class="card__img--hover"></div>
+          </a>
+    <div class="card__info">
+        <span class="card__category"> Ruby</span> 
+        <br>
+        <small class="blog-date">June 25, 2019</small>
+        <h4 class="card__title">My First CLI Project</h4>
+        
+    </div>
+  </article> 
+
+  <article class="blog-card blog--2">
+    <div class="blog__info-hover">
+      <p>Read it!</p>
+    </div> 
+    <div class="card__img" ></div>
+        <a href="https://medium.com/@khmel87/building-an-app-using-ruby-on-rails-78f88126b3cd" class="card_link">
+            <div class="card__img--hover"></div>
+          </a>
+    <div class="card__info">
+        <span class="card__category"> Ruby on Rails</span> 
+        <br>
+        <small class="blog-date">July 17, 2019</small>
+        <h4 class="card__title">Building an App Using Ruby on Rails</h4>
+        
+    </div>
+  </article>  
+
+    <article class="blog-card blog--3">
+    <div class="blog__info-hover">
+      <p>Seriously, it's great</p>
+    </div> 
+    <div class="card__img" ></div>
+        <a href="https://medium.com/@khmel87/javascript-four-principles-of-object-oriented-programming-cd81a04262cb" class="card_link">
+            <div class="card__img--hover"></div>
+          </a>
+    <div class="card__info">
+        <span class="card__category">JavaScript</span> 
+        <br>
+        <small class="blog-date">Dec 8, 2019</small>
+        <h4 class="card__title">JS: Four Principles of Object-Oriented Programming</h4>
+    </div>
+    </article>  
+
+    <article class="blog-card blog--4">
+    <div class="blog__info-hover">
+      <p>Did you read it?</p>
+    </div> 
+    <div class="card__img" ></div>
+        <a href="https://medium.com/@khmel87/intro-into-functional-programming-900285053d4e" class="card_link">
+            <div class="card__img--hover"></div>
+          </a>
+    <div class="card__info">
+        <span class="card__category">JavaScript</span> <br>
+        <small class="blog-date">Dec 15, 2019</small>
+        <h4 class="card__title">Intro Into Functional Programming</h4>
+    </div>
+    </article>  
+
+    <article class="blog-card blog--5">
+    <div class="blog__info-hover">
+      <p>You're missing out</p>
+    </div> 
+    <div class="card__img" ></div>
+        <a href="https://medium.com/@khmel87/understanding-redux-4fe4e3938961" class="card_link">
+            <div class="card__img--hover"></div>
+          </a>
+    <div class="card__info">
+        <span class="card__category">Redux</span> <br>
+        <small class="blog-date">Dec 22, 2019</small>
+        <h4 class="card__title">Understanding Redux</h4>
+    </div>
+    </article>  
+
+    <article class="blog-card blog--6">
+    <div class="blog__info-hover">
+      <p>You have to read it!</p>
+    </div> 
+    <div class="card__img" ></div>
+        <a href="https://medium.com/@khmel87/setting-up-jwt-auth-with-node-js-and-express-cc70206c6a22" class="card_link">
+            <div class="card__img--hover"></div>
+          </a>
+    <div class="card__info">
+        <span class="card__category">Node | Express</span> <br>
+        <small class="blog-date">Dec 29, 2019</small>
+        <h4 class="card__title">Setting up JWT Auth with Node.js and Express</h4>
+    </div>
+    </article>  
+
+    <article class="blog-card blog--7">
+    <div class="blog__info-hover">
+     <p>Just <br> Read <br> It</p>
+    </div> 
+    <div class="card__img" ></div>
+        <a href="https://medium.com/@khmel87/react-hooks-usestate-and-useeffect-82bb6576e80d" class="card_link">
+            <div class="card__img--hover"></div>
+          </a>
+    <div class="card__info">
+        <span class="card__category">React</span> <br>
+        <small class="blog-date">Jan 4, 2020</small>
+        <h4 class="card__title">React Hooks useState() and useEffect()</h4>
+    </div>
+    </article>  
+
+
+
+    
+    
+
+    <!-- <div class="card">
+      <h3 class="title">Card 2</h3>
+      <div class="bar">
+        <div class="emptybar"></div>
+        <div class="filledbar"></div>
+      </div>
+      
+    </div>
+
+    <div class="card">
+      <h3 class="title">Card 3</h3>
+      
+    </div> -->
+   
+
+  <!-- </div> -->
+   </div>
+  </div>
+
+ 
