--- a/src/app/profile/navbar/navbar.component.html
+++ b/src/app/profile/navbar/navbar.component.html
@@ -21,10 +21,10 @@
           <a  href="#skills" ><i class="fas fa-briefcase"></i>    Skills</a>
           </li>
           <li >
-            <a  href="#projects" ><i class="fas fa-copy"></i>   Projects</a>
+            <a  href="#projects" ><i class="fas fa-cogs"></i>   Projects</a>
           </li>
           <li >
-            <a  href="#blogs"blogs ><i class="fas fa-cogs"></i>   Blogs</a>
+            <a  href="#blogs"blogs ><i class="fas fa-copy"></i>   Blogs</a>
           </li>
       </ul>
     </div>
@@ -33,16 +33,16 @@
          <div class='iconContainer'>
            <div [ngStyle]="{'text-align': 'center', 'zoom': '1.2'}">
            
-            <a class="btn btn-default " href="nkhmeleva@yahoo.com"
+            <a class="btn btn-default " href="mailto: nkhmeleva@yahoo.com"
             title="Email">
             <i class="far fa-envelope"></i>
           </a>
-          <a class="btn btn-default " href="https://twitter.com/MehulKo18943279"
+          <a class="btn btn-default " href="https://www.linkedin.com/in/nellykhmeleva/"
             title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a>
             
-          <a class="btn btn-default " href="#"
+          <a class="btn btn-default" href="https://drive.google.com/file/d/1dj9pqmAEtoSIfgcmDDTBrjuDYMf7Dc2f/view?usp=sharing"
             title="Resume">
             <i class="fas fa-file-alt"></i>
           </a>
