--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -1,8 +1,11 @@
-<div class="cardmain" id="projects">
-    <div class="c-body">
-      <h1 [ngStyle]="{'text-align': 'center', 'padding-top': '70px'}">Projects</h1>
+    <div class="c-body" id="projects">
+      <div class="blog">
+        <h1>Projects</h1>
+      </div>
 
       <div class="card-container">
+
+        <div class="row">
 
      <!-- cards -->
      <div class="col-md-4">
@@ -10,14 +13,25 @@
         <div class="card-item">
           <img class ="card-image-top" src="../../../assets/images/wellbee.png" id="">
             <div class="card-body">
-              <h3 class="project-title">WellBee  <i class="fab fa-github"></i>  <i class="fas fa-globe"></i></h3>
-              <h3 class='card-text'>
-                 <img src='../../../assets/images/icons/ruby.png' id="smallIcons"/>
+              <div class="project-title">
+                <h3>WellBee 
+
+                 <a href="https://github.com/khmelka/WellBee"><i class="fab fa-github" [ngStyle]="{'zoom':'1.1'}" title="GitHub"></i></a>
+                  
+                 <a href="https://floating-ocean-14783.herokuapp.com/users"><i class="fas fa-globe" [ngStyle]="{'margin-left':'7px', 'zoom':'1.1'}" title="Demo"></i></a>
+
+                </h3>
+              </div>
+              <div class='card-text'>
+                
+                    <img src='../../../assets/images/icons/ruby.png' id="smallIcons"/>
                      
-                 <img src='../../../assets/images/icons/rails.png' id="smallIcons"/>
+                    <img src='../../../assets/images/icons/rails.png' id="smallIcons"/>
                      
-                 <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
-              </h3>
+                     <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
+                
+                </div>
+              
             </div>
           </div>
         </div>
@@ -28,8 +42,13 @@
         <div class="card-item">
           <img class ="card-image-top" src="../../../assets/images/horrormovies.png" id="">
             <div class="card-body">
-              <h3 class="project-title">HorrorMovies  <i class="fab fa-github"></i>  <i class="fas fa-globe"></i></h3>
-              <h3 class='card-text'>
+              <div class="project-title">
+                <h3>HorrorMovies 
+                  <a href="https://github.com/khmelka/HorrorMovieFrontend"><i class="fab fa-github" [ngStyle]="{'zoom':'1.1'}" title="GitHub"></i></a>
+                  
+                  <a href="https://master.d33t5402rji87e.amplifyapp.com/"><i class="fas fa-globe" [ngStyle]="{'margin-left':'7px', 'zoom':'1.1'}" title="Demo"></i></a>                </h3>
+              </div>              
+              <div class='card-text'>
                 <img src='../../../assets/images/icons/Javascript.png' id="smallIcons"/>
                       
                 <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
@@ -37,7 +56,7 @@
                 <img src='../../../assets/images/icons/ruby.png' id="smallIcons"/>
                       
                 <img src='../../../assets/images/icons/rails.png' id="smallIcons"/>
-              </h3>
+              </div>
             </div>
         </div>
       </div>
@@ -48,25 +67,37 @@
         <div class="card-item">
           <img class ="card-image-top" src="../../../assets/images/skibud.png" id="">
             <div class="card-body">
-              <h3 class="project-title">SkiBud  <i class="fab fa-github"></i>  <i class="fas fa-globe"></i></h3>
-              <h3 class='card-text'>
-                <img src='../../../assets/images/icons/React.png' id="smallIcons"/>
-                      
-                <img src='../../../assets/images/icons/Redux.png' id="smallIcons"/>
-                      
-                <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
-                      
-                <img src='../../../assets/images/icons/Nodejs.png' id="smallIcons"/>
-                      
-                <img src='../../../assets/images/icons/Express.png' id="smallIcons"/>
-              </h3>
+              <div class="project-title">
+                <h3>SkiBud 
+                  <i class="fab fa-github" [ngStyle]="{'zoom':'1.1'}" title="GitHub Link Coming Soon"></i>
+                  
+                  <i class="fas fa-globe" [ngStyle]="{'margin-left':'7px', 'zoom':'1.1'}" title="Demo Coming Soon"></i> 
+                  <small class="blog-date">Links Coming Soon</small>
+               
+                </h3>
+              </div>
+                <div class='card-text'>
+                    <img src='../../../assets/images/icons/React.png' id="smallIcons" title="React"/>
+                          
+                    <img src='../../../assets/images/icons/Redux.png' id="smallIcons"/>
+                          
+                    <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
+                          
+                    <img src='../../../assets/images/icons/node.png' id="smallIcons"/>
+                          
+                    <img src='../../../assets/images/icons/expressjs-icon.png' id="smallIcons"/>
+
+                    <img src='../../../assets/images/icons/mongodb-icon.png' id="smallIcons" [ngStyle]="{'margin-left':'-9px'}"/>
+              </div>
             </div>
         </div>
+
       </div>
+     </div>
     </div>
     </div>
     </div>
-  </div>
+ 
 
   <!-- https://floating-ocean-14783.herokuapp.com/users -->
   <!-- https://master.d33t5402rji87e.amplifyapp.com/ -->
