--- a/src/app/profile/skills/skills.component.html
+++ b/src/app/profile/skills/skills.component.html
@@ -1,12 +1,28 @@
-<div class="cardmain" id="skills">
-    <div class="c-body">
-
-
-      <h5 class="card-title">SKILLS</h5>
-      <p class="card-text">I am a software engineer </p>
-      <!-- <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a> -->
-
-
+  <div class="c-body" id="skills">
+    <div class="blog">
+      <h1>skills</h1>
     </div>
+
+        <div class="skills-card-container">
+
+            <div class="row">
+
+                  <!-- cards -->
+                    <div class="skills-inner-card">
+                      <div class="skills-card-item">
+                          <img src='../../../assets/images/icons/React.png' id="skillsIcons"/>
+                          <img src='../../../assets/images/icons/Redux.png' id="skillsIcons"/>
+                          <img src='../../../assets/images/icons/Javascript.png' id="skillsIcons"/>
+                          <img src='../../../assets/images/icons/ruby.png' id="skillsIcons"/>
+                          <img src='../../../assets/images/icons/rails.png' id="skillsIcons"/>
+                          <img src='../../../assets/images/icons/node.png' id="skillsIcons"/>
+                          <img src='../../../assets/images/icons/expressjs-icon.png' id="skillsIcons"/>
+                          <img src='../../../assets/images/icons/mongodb-icon.png' id="skillsIcons" [ngStyle]="{'margin-left': '-40px'}"/>
+                          <img src='../../../assets/images/icons/aws.png' id="skillsIcons"[ngStyle]="{'zoom': '1.4', 'margin-left': '-40px'}"/>
+                         </div>
+                      </div>
+        
+                      
+                </div>
+        </div>
   </div>
