--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -36,8 +36,8 @@ body {
     color: white;
     font-size: 20px;
     text-transform: uppercase;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     margin-bottom: 0;
 }
 /* #sidebar.active {
@@ -167,7 +167,7 @@ li {
 .btn.btn-default {  
     color: rgb(255, 255, 255);
     background-color: rgba(255, 255, 255, 0.363);
-    border-radius: 50%;
+    /* border-radius: 50%; */
     margin: 7px;
 }
 
@@ -180,14 +180,10 @@ li {
 } */
 
 /* about */
-.cardmain {
-    /* background-color: green; */
-    /* margin: auto; */
-    /* width: 100vh; */
-    /* height: 350px; */
-    /* height: 100vh; */
-}
 
+.allin{
+    overflow: hidden;
+}
 .c-body {
     background-color: #c5bcbcd0;
     /* border: 5px solid rgb(252, 53, 225); */
@@ -205,39 +201,59 @@ li {
     /* display: block; */
 }
 
-.aboutcontainer { 
-    height: 100vh;
-    /* width: 50px; */
-    background-color: rgb(165, 165, 236);
-    display: block;
+/* about */
+.about-card {
+    width: 500px;
+    height: 230px;
+    column-count: 2;
+    column-gap: 20px;
+    text-align: left;
+    background-color: rgba(255, 255, 255, 0.363);
+    padding: 30px;
+    box-shadow: -5px 3px 13px 0px rgb(248, 247, 247);
 }
 
+.about-item {
+  
+}
 
-/* project cards */
+/* projects */
 .card-container {
     display: inline-flex;
     /* text-align: center; */
     margin: auto;
-    margin-top: 160px;
+    /* margin-top: 160px; */
+    transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
     /* margin-left:50px; */
-}
-
-.col-md-3 {
-    /* margin-right: 80px; */
 }
 
 
 
 .inner-card{
-    border: 2px solid white;
-    width: 280px;
-    height: 400px;
+    /* border: 2px solid white; */
+    width: 300px;
+    height: 335px;
     background-color: rgba(255, 255, 255, 0.363);
+    /* box-shadow: 0px 13px 10px -7px rgba(255, 255, 255, 0.637); */
+    box-shadow: -5px 3px 13px 0px rgb(248, 247, 247);
+    /* border-radius: 2%; */
+}
+
+.inner-card:hover {
+    transform: translateY(-20px);
+    transition: 0.4s ease-out;
+    transform: scale(1.10, 1.10);
+}
+
+.card-body {
+    display: contents;
 }
 
 .card-image-top {
-    width: 275px;
-    height: 160px;
+    width: 300px;
+    height: 180px;
+    margin-top: 1px;
+    /* border-radius: 2%; */
 }
 
 #smallIcons {
@@ -247,13 +263,266 @@ li {
 }
 
 .project-title {
-    margin-top: 15px;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    font-family: 'Roboto Slab', serif;
 }
 
 .card-text {
-    margin-top: 25px;
+    /* margin-top: 13px;
+    margin-left: 95px; */
 }
 
 .iconContainer {
     padding-top: 35px;
 }
+
+/* blogs */
+
+.blog {
+    text-align: center;
+    padding-top: 70px;
+    margin-bottom: 150px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    text-transform: uppercase;
+}
+
+.blog-row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 140px;
+    margin-left: 80px;
+    text-align: left;
+}
+
+.blog-inner-card {
+    text-align: left;
+}
+
+.blog-card-item {
+    background-color: white;
+    /* border: 2px solid rgba(231, 219, 219, 0.849); */
+    width: 230px;
+    height: 240px;
+    margin-bottom: 50px;
+}
+
+.blog-card-image-top {
+    width: 230px;
+    height: 120px;
+    margin-bottom: 8px;
+}
+
+.blog-date {
+    font-size: 55%;
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+    font-size: 7px;
+    letter-spacing: 1px;
+    font-weight: 500;
+    color: #868686;
+}
+
+.blog-cards {
+    display: flex;
+    display: -webkit-flex;
+    justify-content: center;
+    -webkit-justify-content: center;
+    
+}
+
+.blog-card {
+    width: 180px;
+    height: 340px;
+    margin-left: 100px;
+    margin-bottom: 20px;
+    /* transition: all .4s cubic-bezier(0.175, 0.885, 0, 1); */
+    background-color: #fff;
+    overflow: hidden;
+    box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
+    box-shadow: -1rem 0 3rem #000;
+/*   margin-left: -50px; */
+    transition: 0.4s ease-out;
+    position: relative;
+    left: 0px;
+}
+
+
+.blog--1 .card__img, .blog--1 .card__img--hover {
+    background-image: url('../images/blogs/cli.jpg'); 
+}
+.blog--2 .card__img, .blog--2 .card__img--hover {
+    background-image: url('../images/blogs/rails.jpg'); 
+}
+.blog--3 .card__img, .blog--3 .card__img--hover {
+    background-image: url('../images/blogs/oop.png'); 
+}
+.blog--4 .card__img, .blog--4 .card__img--hover {
+    background-image: url('../images/blogs/FP.png'); 
+}
+.blog--5 .card__img, .blog--5 .card__img--hover {
+    background-image: url('../images/blogs/redux.png'); 
+}
+.blog--6 .card__img, .blog--6 .card__img--hover {
+    background-image: url('../images/blogs/JWT.jpg'); 
+}
+.blog--7 .card__img, .blog--7 .card__img--hover {
+    background-image: url('../images/blogs/hooks.jpg'); 
+}
+
+
+
+.card__read {
+    width: 18px;
+    color: red;
+}
+
+
+.card__img {
+    visibility: hidden;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 180px;
+
+  
+}
+
+.blog__info-hover {
+    position: absolute;
+    padding: 16px;
+    width: 100%;
+    opacity: 0;
+    top: 0;
+}
+
+.card__img--hover {
+   transition: 0.2s all ease-out;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    position: absolute;
+    height: 180px;
+    top: 0;
+  
+}
+
+
+.blog-card:hover {
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
+    transform: scale(1.10, 1.10);
+}
+
+.card__info {
+  z-index: 2;
+  background-color: #fff;
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+  padding: 5px 24px 24px 24px;
+}
+
+.card__category {
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
+    font-size: 10px;
+    letter-spacing: 2px;
+    font-weight: 500;
+    color: #868686;
+}
+
+.card__title {
+    margin-top: 5px;
+    font-family: 'Roboto Slab', serif;
+    font-size: 20px;
+}
+
+.card__by {
+    font-size: 12px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+}
+
+.card__author {
+    font-weight: 600;
+    text-decoration: none;
+    color: #AD7D52;
+}
+
+.blog-card:hover .card__img--hover {
+    height: 100%;
+    opacity: 0.3;
+}
+
+.blog-card:hover .card__info {
+    background-color: transparent;
+    position: relative;
+  
+}
+
+.blog-card:hover .blog__info-hover {
+    opacity: 1;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    margin-top:40px;
+    font-size: 30px;
+} 
+
+/* carusel */
+
+   .blog-card:not(:first-child) {
+      margin-left: -70px;
+  }
+  
+  .blog-card:hover {
+    transform: translateY(-20px);
+    transition: 0.4s ease-out;
+  }
+  
+  .blog-card:hover ~ .blog-card {
+    position: relative;
+    left: 100px;
+    transition: 0.4s ease-out; 
+  } 
+
+
+/* skills */
+
+#skillsIcons {
+    width: 120px;
+    margin-right: 40px;
+    /* margin-top: 50px; */
+    margin-bottom  : 40px;
+  
+}
+
+.skills-card-container {
+    display: inline-flex;
+    /* text-align: center; */
+    margin: auto;
+    /* margin-top: 100px; */
+    flex-wrap: wrap;
+    /* margin-left:50px; */
+}
+
+.skills-inner-card{
+    /* border: 2px solid white; */
+    width: 900px;
+    height: 500px;
+    /* background-color: rgba(255, 255, 255, 0.363); */
+}
+
+.skills-card-item {
+    /* margin-top: 30px; */
+}
+
+
+
+ 
+
+  
+  
+
+  
