--- a/src/app/profile/navbar/navbar.component.html
+++ b/src/app/profile/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         </div>
 
         <p class="myName" >Nelly Khmeleva</p>
-
+          <p class="myTitle">Software Engineer</p>
       <div class="test">
       <ul >
         <li >
