--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -68,11 +68,10 @@
           <img class ="card-image-top" src="../../../assets/images/skibud.png" id="">
             <div class="card-body">
               <div class="project-title">
-                <h3>SkiBud 
-                  <i class="fab fa-github" [ngStyle]="{'zoom':'1.1'}" title="GitHub Link Coming Soon"></i>
+                <h3>SnowBuddy 
+                  <a href="https://github.com/khmelka/snowBuddy-frontend"><i class="fab fa-github" [ngStyle]="{'zoom':'1.1'}" title="GitHub"></i></a>
                   
-                  <i class="fas fa-globe" [ngStyle]="{'margin-left':'7px', 'zoom':'1.1'}" title="Demo Coming Soon"></i> 
-                  <small class="blog-date">Links Coming Soon</small>
+                  <a href="https://master.d2ukukz7ipiflm.amplifyapp.com"><i class="fas fa-globe" [ngStyle]="{'margin-left':'7px', 'zoom':'1.1'}" title="Demo"></i></a>
                
                 </h3>
               </div>
