--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -24,11 +24,11 @@
               </div>
               <div class='card-text'>
                 
-                    <img src='../../../assets/images/icons/ruby.png' id="smallIcons"/>
+                    <img src='../../../assets/images/icons/ruby.png' id="smallIcons" title ="Ruby"/>
                      
-                    <img src='../../../assets/images/icons/rails.png' id="smallIcons"/>
+                    <img src='../../../assets/images/icons/rails.png' id="smallIcons" title ="Rails"/>
                      
-                     <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
+                     <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons" title ="Bootstrap"/>
                 
                 </div>
               
@@ -49,13 +49,13 @@
                   <a href="https://master.d33t5402rji87e.amplifyapp.com/"><i class="fas fa-globe" [ngStyle]="{'margin-left':'7px', 'zoom':'1.1'}" title="Demo"></i></a>                </h3>
               </div>              
               <div class='card-text'>
-                <img src='../../../assets/images/icons/Javascript.png' id="smallIcons"/>
+                <img src='../../../assets/images/icons/Javascript.png' id="smallIcons" title="Javascript"/>
                       
-                <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
+                <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons" title="Bootstrap"/>
                       
-                <img src='../../../assets/images/icons/ruby.png' id="smallIcons"/>
+                <img src='../../../assets/images/icons/ruby.png' id="smallIcons" title="Ruby"/>
                       
-                <img src='../../../assets/images/icons/rails.png' id="smallIcons"/>
+                <img src='../../../assets/images/icons/rails.png' id="smallIcons" title="Rails"/>
               </div>
             </div>
         </div>
@@ -78,15 +78,15 @@
                 <div class='card-text'>
                     <img src='../../../assets/images/icons/React.png' id="smallIcons" title="React"/>
                           
-                    <img src='../../../assets/images/icons/Redux.png' id="smallIcons"/>
+                    <img src='../../../assets/images/icons/Redux.png' id="smallIcons" title="Redux"/>
                           
-                    <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons"/>
+                    <img src='../../../assets/images/icons/Bootstrap.png' id="smallIcons" title="Bootstrap"/>
                           
-                    <img src='../../../assets/images/icons/node.png' id="smallIcons"/>
+                    <img src='../../../assets/images/icons/node.png' id="smallIcons" title="Node"/>
                           
-                    <img src='../../../assets/images/icons/expressjs-icon.png' id="smallIcons"/>
+                    <img src='../../../assets/images/icons/expressjs-icon.png' id="smallIcons" title="Express"/>
 
-                    <img src='../../../assets/images/icons/mongodb-icon.png' id="smallIcons" [ngStyle]="{'margin-left':'-9px'}"/>
+                    <img src='../../../assets/images/icons/mongodb-icon.png' id="smallIcons" title="MongoDB" [ngStyle]="{'margin-left':'-9px'}"/>
               </div>
             </div>
         </div>
