--- a/src/app/profile/skills/skills.component.html
+++ b/src/app/profile/skills/skills.component.html
@@ -10,15 +10,15 @@
                   <!-- cards -->
                     <div class="skills-inner-card">
                       <div class="skills-card-item">
-                          <img src='../../../assets/images/icons/React.png' id="skillsIcons"/>
-                          <img src='../../../assets/images/icons/Redux.png' id="skillsIcons"/>
-                          <img src='../../../assets/images/icons/Javascript.png' id="skillsIcons"/>
-                          <img src='../../../assets/images/icons/ruby.png' id="skillsIcons"/>
-                          <img src='../../../assets/images/icons/rails.png' id="skillsIcons"/>
-                          <img src='../../../assets/images/icons/node.png' id="skillsIcons"/>
-                          <img src='../../../assets/images/icons/expressjs-icon.png' id="skillsIcons"/>
-                          <img src='../../../assets/images/icons/mongodb-icon.png' id="skillsIcons" [ngStyle]="{'margin-left': '-40px'}"/>
-                          <img src='../../../assets/images/icons/aws.png' id="skillsIcons"[ngStyle]="{'zoom': '1.4', 'margin-left': '-40px'}"/>
+                          <img src='../../../assets/images/icons/React.png' id="skillsIcons" title="React"/>
+                          <img src='../../../assets/images/icons/Redux.png' id="skillsIcons" title="Redux"/>
+                          <img src='../../../assets/images/icons/Javascript.png' id="skillsIcons" title="JavaScript"/>
+                          <img src='../../../assets/images/icons/ruby.png' id="skillsIcons" title="Ruby"/>
+                          <img src='../../../assets/images/icons/rails.png' id="skillsIcons" title="Rails"/>
+                          <img src='../../../assets/images/icons/node.png' id="skillsIcons" title="Node"/>
+                          <img src='../../../assets/images/icons/expressjs-icon.png' id="skillsIcons" title="Express"/>
+                          <img src='../../../assets/images/icons/mongodb-icon.png' id="skillsIcons" title="MongoDB" [ngStyle]="{'margin-left': '-40px'}"/>
+                          <img src='../../../assets/images/icons/aws.png' id="skillsIcons" title="AWS"[ngStyle]="{'zoom': '1.4', 'margin-left': '-40px'}"/>
                          </div>
                       </div>
         
