--- a/src/app/profile/navbar/navbar.component.html
+++ b/src/app/profile/navbar/navbar.component.html
@@ -31,20 +31,25 @@
 
 
          <div class='iconContainer'>
-           <div [ngStyle]="{'text-align': 'center', 'zoom': '1.2'}">
+           <div [ngStyle]="{'text-align': 'center', 'zoom': '1'}">
            
-            <a class="btn btn-default " href="mailto: nkhmeleva@yahoo.com"
+            <a class="btn btn-default" href="mailto: nkhmeleva@yahoo.com" 
             title="Email">
-            <i class="far fa-envelope"></i>
+            <i class="far fa-envelope" [ngStyle]="{'zoom': '1.2'}" ></i>
           </a>
           <a class="btn btn-default " href="https://www.linkedin.com/in/nellykhmeleva/"
             title="LinkedIn">
-            <i class="fab fa-linkedin-in"></i>
+            <i class="fab fa-linkedin-in" [ngStyle]="{'zoom': '1.2'}"></i>
           </a>
             
+          <a class="btn btn-default " href="https://github.com/khmelka"
+            title="GitHub">
+            <i class="fab fa-github" [ngStyle]="{'zoom': '1.2'}"></i>
+          </a>
+
           <a class="btn btn-default" href="https://drive.google.com/file/d/1KjAUgqT28JTmH7PBFrxSpNRaXeX2fqXU/view?usp=sharing"
             title="Resume">
-            <i class="fas fa-file-alt"></i>
+            <i class="fas fa-file-alt" [ngStyle]="{'zoom': '1.2'}"></i>
           </a>
             
             </div>
