--- a/src/app/profile/blogs/blogs.component.html
+++ b/src/app/profile/blogs/blogs.component.html
@@ -4,7 +4,7 @@
     </div>
     <!-- <h1 >Blogs</h1> -->
 
-    <!-- <div class="card-container"> -->
+    <div class="blog-container">
 
       <div class="blog-row">
 
@@ -270,7 +270,7 @@
     </div> -->
    
 
-  <!-- </div> -->
+  </div>
    </div>
   </div>
 
