--- a/src/app/profile/about/about.component.html
+++ b/src/app/profile/about/about.component.html
@@ -9,12 +9,27 @@
 
                   <!-- cards -->
                     <div class="about-card">
+                      
                       <div class="about-item">
-                        I am passionate about software engineering and finding creative 
-                        solutions to solve complex problems. 
-                        After several years as a clinical researcher and a medical interpreter, 
-                        I have found myself drawn to the world of programming, its fast pace and unlimited learning opportunities. 
-                        Trained in JavaScript, React, Ruby, Rails, Node, and AWS.  
+                        Before discovering my passion for programming, I enjoyed science and medicine. 
+                        Graduating from University of Colorado Denver with the Bachelor’s degree in Biology, 
+                        I worked as a laboratory research assistant and, later, as a medical interpreter thinking 
+                        I would eventually continue medical education. 
+                        <div>
+                          <img src="../../../assets/images/cat.jpg" alt="" id="cat"/>
+                        </div>  
+                        As great as it was, something was missing… 
+                        That something was the fast pace, problem solving and unlimited learning opportunities that 
+                        I discovered in programming.
+                        
+                        Having spent some time learning on my own, 
+                        I enrolled into Flatiron School's Software Engineering Immersive program. 
+                        
+                        The program was incredibly intensive and really pushed every cell in my brain! 
+                        Now I have strong skills in React, JavaScript, and Ruby on Rails. Since graduation, 
+                        I’ve been pushing myself every single day by learning and exploring new technologies. 
+                        To build this portfolio, I used Angular and Bootstrap for styling.
+
                         </div>
                       </div>
         
