--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -210,14 +210,20 @@ li {
 
 /* about */
 .about-card {
-    width: 500px;
-    height: 230px;
+    width: 800px;
+    /* height: 230px; */
     column-count: 2;
     column-gap: 20px;
     text-align: left;
     background-color: rgba(255, 255, 255, 0.363);
     padding: 30px;
     box-shadow: -5px 3px 13px 0px rgb(248, 247, 247);
+}
+
+#cat {
+    width: 150px;
+    float: left;
+    margin-right: 20px;
 }
 
 .about-item {
