edited mod5 pic

--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -65,7 +65,7 @@
     <div class="col-md-4">
       <div class="inner-card">
         <div class="card-item">
-          <img class ="card-image-top" src="../../../assets/images/skibud.png" id="">
+          <img class ="card-image-top" src="../../../assets/images/snowbuddy.png" id="">
             <div class="card-body">
               <div class="project-title">
                 <h3>SnowBuddy 
